<resources>
    <string name="app_name">EspressoMachine</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_espresso_machine">EspressoMachineActivity</string>
    <string name="start_button">Coffee Time</string>
    <string name="title_main_screen">Espresso Machine</string>
    <string name="engineers">Number of engineers (1-100)</string>
    <string name="percent_busy">Chance of busyness (0-100%)</string>
    <string name="busy_time">Busytime (0-480 Min)</string>
</resources>
